--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/redux-persist": "^4.3.1",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
@@ -28,6 +29,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
